# ane

./: .gitignore  CLAUDE.md  Cargo.toml  DOCUMENTATION_0009.md  DOCUMENTATION_0011.md  Dockerfile.dev  Makefile  README.md  ane-findings.md
.amux/workflows/: 06811b7a-0002-Implement Hard Feature Workflow.json  14a44550-0007-Implement Hard Feature Workflow.json  227b3e1d-0012-Implement Hard Feature Workflow.json  2763ae03-0001-Implement Hard Feature Workflow.json  427a9c18-0005-Implement Hard Feature Workflow.json  46520d00-0008-Implement Hard Feature Workflow.json  6c0f1737-0004-Implement Hard Feature Workflow.json  74ac2816-0006-Implement Hard Feature Workflow.json  77ea2c3b-0011-Implement Hard Feature Workflow.json  7fdb8bc1-0009-Implement Hard Feature Workflow.json  80025f01-0015-Implement Hard Feature Workflow.json  842da126-0014-Implement Hard Feature Workflow.json  a2bf2aaf-0013-Implement Hard Feature Workflow.json  b6d165f3-0010-Implement Hard Feature Workflow.json  d75ff6c1-0003-Implement Hard Feature Workflow.json
.awman/: Dockerfile.claude  Dockerfile.codex  config.json
.cargo/: .global-cache
.claude/skills/ane/: SKILL.md
.github/workflows/: release.yml  test.yml
aspec/: foundation.md
aspec/architecture/: apis.md  chord-engine.md  design.md  lsp-engine.md  security.md
aspec/devops/: cicd.md  infrastructure.md  localdev.md  operations.md  subagents.md
aspec/genai/: agents.md
aspec/uxui/: cli.md  experience.md  interface.md  setup.md
aspec/work-items/: 0001-implementation-guide.md  0001-lsp-engine.md  0002-chord-engine.md  0002-documentation.md  0003-full-cli-implementation.md  0003-implementation-guide.md  0004-initial-tui-implementation-guide.md  0004-initial-tui-implementation.md  0005-implementation-guide.md  0005-jump-action.md  0006-code-agent-integration.md  0007-application-managed-selection.md  0008-go-typescript-python-support.md  0009-json-yaml-toml-dockerfile-xml.md  0010-top-bar-additions.md  0011-new-chord-components.md  0012-numeric-positional-guide.md  0012-numeric-positional.md  0013-on-disk-updates-guide.md  0013-on-disk-updates.md  0014-filetree-enhancements.md  0014-implementation-guide.md  0015-IMPLEMENTATION.md  0015-QUICK-REFERENCE.md  0015-README.md  0015-address-agent-usage-feedback.md
docs/: 00-getting-started.md  01-chord-system.md  02-chord-examples.md  03-using-the-tui.md  04-exec-mode.md  05-embedding-via-crate.md  06-lsp-integration.md  07-architecture-overview.md  08-compared-to-other-editors.md  09-syntax-highlighting-and-languages.md  10-mouse-selection.md  11-listing-and-word-definition.md  WORK_ITEM_0006.md  chord-system.md  chord_examples.md  contents.md
docs/blog/: 0001-ane-v0.1.md  0002-ane-v0.2.md
docs/releases/: v0.1.0.md  v0.2.0.md
manual-test/: chord_types.rs  cli_frontend.rs  main.rs  manualtest.txt  testfile1
scripts/: release.sh
skills/: ane-skill.md
src/: core.rs  lib.rs  main.rs
src/commands/: chord.rs  diff.rs  mod.rs
src/data/: agents.rs  ane-skill.md  buffer.rs  chord_types.rs  file_tree.rs  init.rs  mod.rs  skill.rs  state.rs
src/frontend/: cli.rs  cli_frontend.rs  mod.rs  traits.rs
tests/: chord_engine_integration.rs  lsp_integration.rs  lsp_real_query.rs  work_item_0003.rs  work_item_0004.rs  work_item_0005.rs  work_item_0006.rs  work_item_0012.rs
(+47 files in other folders)
