[package]
name = "ane-editor"
version = "0.1.0"
edition = "2021"
description = "Agent Native Editor — a modern vim-inspired terminal editor built for humans and code agents"
license = "MIT"
repository = "https://github.com/prettysmartdev/ane"
rust-version = "1.75"
exclude = [
  "aspec/",
  "manual-test/",
  "skills/",
  "scripts/",
  ".amux/",
  ".github/",
  "docs/images/",
  "Dockerfile.dev",
]

[lib]
name = "ane"
path = "src/lib.rs"

[[bin]]
name = "ane"
path = "src/main.rs"
required-features = ["frontends"]

[[bin]]
name = "mock_lsp_server"
path = "src/bin/mock_lsp_server.rs"
required-features = ["test-support"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
walkdir = "2"

tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-md = "0.5"

clap = { version = "4", features = ["derive"], optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
ratatui = { version = "0.29", optional = true }

[features]
default = ["frontends"]
frontends = ["dep:clap", "dep:crossterm", "dep:ratatui"]
test-support = []

[dev-dependencies]
tempfile = "3"
ane-editor = { path = ".", version = "0.1.0", default-features = false, features = ["test-support"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
